--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,31 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  background-image: url('../assets/images/back-office.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-} */ 
-/* 
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-} */
-
- 
-
-
 html,
 body {
   padding: 0;
@@ -45,14 +20,61 @@ body {
     sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  background-image: url('../assets/images/back-office.jpg');
+  background-image: url('/back-office.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
 }
 
-* {
-  box-sizing: border-box;
+*, *::before, *::after{
+  box-sizing: border-box; 
 }
 
+*{
+  margin: 0; 
+  padding: 0; 
+}
+
+ul[role='list'], ol[role='list']{
+  list-style: none; 
+}
+
+html:focus-within{
+  scroll-behavior: smooth; 
+}
+
+a:not([class]){
+  text-decoration-skip-ink: auto; 
+}
+
+img, picture, svg, video, canvas{
+  max-width: 100%;
+  height: auto; 
+  vertical-align: middle; 
+  font-style: italic; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
+input, button, textarea, select{
+  font: inherit; 
+}
+
+@media (prefers-reduced-motion: reduce){
+  html:focus-within {
+      scroll-behavior: auto;
+  }
+  *, *::before, *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+      transition: none;
+  }
+}
+
+body, html{
+  height: 100%; 
+  scroll-behavior: smooth; 
+}
