--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,10 @@ body {
     sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  background-image: url('/back-office.jpg');
+  /* background-image: url('/back-office.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 
 }
 
